--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -149,7 +149,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 3</td>
-				<td class="schedule-presentation">Bartłomiej Kura</td>
+				<td class="schedule-presentation">Bartłomiej Kura - Confucianism and Corporate Culture: The Case of South Korean <i>Chaebol</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 4</td>
