--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/index.html
@@ -55,7 +55,10 @@
 
 <div class="exam-question">
 	<h3>[5~8] 다음은 무엇에 대한 글인지 고르십시오.</h3>
-	<h4>5. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/5.png" alt="5"></h4>
+	<h4>5.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/5.png" alt="5">
+	</div>
 	<ol>
 		<li>병원</li>
 		<li>은행 <strong class="correct">✓</strong></li>
@@ -64,47 +67,62 @@
 	</ol>
 </div>
 <div class="exam-question">
-	<h4>6. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/6.png" alt="6"></h4>
+	<h4>6.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/6.png" alt="6">
+	</div>
 	<ol>
 		<li>병원</li>
-		<li>은행</li>
+		<li>은행 <strong class="correct">✓</strong></li>
 		<li>가게</li>
 		<li>학원</li>
 	</ol>
 </div>
 <div class="exam-question">
-	<h4>7. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/7.png" alt="7"></h4>
+	<h4>7.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/7.png" alt="7">
+	</div>
 	<ol>
 		<li>과자</li>
 		<li>안경</li>
-		<li>우유</li>
+		<li>우유 <strong class="correct">✓</strong></li>
 		<li>신발</li>
 	</ol>
 </div>
 <div class="exam-question">
-	<h4>8. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/8.png" alt="8"></h4>
+	<h4>8.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/8.png" alt="8">
+	</div>
 	<ol>
 		<li>건강 관리</li>
 		<li>전기 절약</li>
-		<li>화재 예방</li>
+		<li>화재 예방 <strong class="correct">✓</strong></li>
 		<li>교통 안전</li>
 	</ol>
 </div>
 
 <div class="exam-question">
 	<h3>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h3>
-	<h4>9. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/9.png" alt="9"></h4>
+	<h4>9.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/9.png" alt="9">
+	</div>
 	<ol>
 		<li>여러 나라 작가가 이번 전시회에 참여한다.</li>
 		<li>이 전시회에 가면 가을에 대한 사진을 볼 수 있다.</li>
-		<li>가족 사진을 들고 가면 관람료를 내지 않아도 된다.</li>
+		<li>가족 사진을 들고 가면 관람료를 내지 않아도 된다. <strong class="correct">✓</strong></li>
 		<li>작가와의 대화는 전시회 기간 동안 날마다 진행된다.</li>
 	</ol>
 </div>
 <div class="exam-question">
-	<h4>10. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/10.png" alt="10"></h4>
+	<h4>10.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/10.png" alt="10">
+	</div>
 	<ol>
-		<li>주인 없는 동물을 데려와 키우는 사람이 가장 적다.</li>
+		<li>주인 없는 동물을 데려와 키우는 사람이 가장 적다. <strong class="correct">✓</strong></li>
 		<li>인터넷에서 산 사람이 가게에서 산 사람보다 더 많다.</li>
 		<li>가게에서 산 사람보다 아는 사람한테서 받은 사람이 더 적다.</li>
 		<li>아는 사람한테서 동물을 데리고 온 사람은 전체의 반이 넘는다.</li>
@@ -117,7 +135,7 @@
 	</div>
 	<ol>
 		<li>이 식당은 건물 전체가 유리로 만들어졌다.</li>
-		<li>이 식당의 손님들은 음식 만드는 것을 볼 수 있다.</li>
+		<li>이 식당의 손님들은 음식 만드는 것을 볼 수 있다. <strong class="correct">✓</strong></li>
 		<li>이 식당은 음식을 먹는 곳과 조리실의 구분이 없다.</li>
 		<li>이 식당은 손님들을 위해 매일 다른 공연을 준비한다.</li>
 	</ol>
@@ -131,7 +149,7 @@
 		<li>이번 조사는 직접 방문해서 조사하는 방식을 사용했다.</li>
 		<li>종이 신문을 읽는 사람이 줄면서 인터넷의 사용도 줄었다.</li>
 		<li>조사된 가구 중에서 절반은 집으로 배달되는 신문을 읽는다.</li>
-		<li>이번 조사와 지난해 조사는 서로 같은 가구를 대상으로 했다.</li>
+		<li>이번 조사와 지난해 조사는 서로 같은 가구를 대상으로 했다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -146,7 +164,7 @@
 	</div>
 	<ol>
 		<li>(가)-(다)-(나)-(라)</li>
-		<li>(가)-(다)-(라)-(나)</li>
+		<li>(가)-(다)-(라)-(나) <strong class="correct">✓</strong></li>
 		<li>(다)-(나)-(가)-(라)</li>
 		<li>(다)-(라)-(가)-(나)</li>
 	</ol>
@@ -163,7 +181,7 @@
 		<li>(나)-(다)-(라)-(가)</li>
 		<li>(나)-(라)-(다)-(가)</li>
 		<li>(라)-(가)-(나)-(다)</li>
-		<li>(라)-(나)-(가)-(다)</li>
+		<li>(라)-(나)-(가)-(다) <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
