--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/index543589035435435.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/index543589035435435.html
@@ -51,28 +51,40 @@
 
 <div class="exam-question">
 	<h3>[5~8] 다음은 무엇에 대한 글인지 고르십시오.</h3>
-	<h4>5. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/5.png" alt="5"></h4>
+	<h4>5.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/5.png" alt="5">
+	</div>
 	<ol>
 		<li>병원</li>
 		<li>은행 <strong class="correct">✓</strong></li>
 		<li>여행사</li>
 		<li>체육관</li>
 	</ol>
-	<h4>6. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/6.png" alt="6"></h4>
+	<h4>6.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/6.png" alt="6">
+	</div>
 	<ol>
 		<li>병원</li>
 		<li>은행 <strong class="correct">✓</strong></li>
 		<li>가게</li>
 		<li>학원</li>
 	</ol>
-	<h4>7. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/7.png" alt="7"></h4>
+	<h4>7.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/7.png" alt="7">
+	</div>
 	<ol>
 		<li>과자</li>
 		<li>안경</li>
 		<li>우유 <strong class="correct">✓</strong></li>
 		<li>신발</li>
 	</ol>
-	<h4>8. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/8.png" alt="8"></h4>
+	<h4>8.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/8.png" alt="8">
+	</div>
 	<ol>
 		<li>건강 관리</li>
 		<li>전기 절약</li>
@@ -83,14 +95,20 @@
 
 <div class="exam-question">
 	<h3>[9~12]. 다음 글 또는 그래프의 내용과 같은 것을 고르십시오.</h3>
-	<h4>9. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/9.png" alt="9"></h4>
+	<h4>9.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/9.png" alt="9">
+	</div>
 	<ol>
 		<li>여러 나라 작가가 이번 전시회에 참여한다.</li>
 		<li>이 전시회에 가면 가을에 대한 사진을 볼 수 있다.</li>
 		<li>가족 사진을 들고 가면 관람료를 내지 않아도 된다. <strong class="correct">✓</strong></li>
 		<li>작가와의 대화는 전시회 기간 동안 날마다 진행된다.</li>
 	</ol>
-	<h4>10. <img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/10.png" alt="10"></h4>
+	<h4>10.</h4>
+	<div>
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3/img/10.png" alt="10">
+	</div>
 	<ol>
 		<li>주인 없는 동물을 데려와 키우는 사람이 가장 적다. <strong class="correct">✓</strong></li>
 		<li>인터넷에서 산 사람이 가게에서 산 사람보다 더 많다.</li>
