--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/4/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/4/index.html
@@ -168,143 +168,141 @@
 	</tr>
 </table>
 
-<!-- <h3>文자로 끝나는 단어</h3> -->
+<h3>食자로 끝나는 단어</h3>
 
-<!-- <table class="hanja"> -->
-	<!-- <tbody> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-1">公</td> -->
-			<!-- <td class="hanja-related-2">論</td> -->
-			<!-- <td class="hanja-related-3">本</td> -->
-		<!-- </tr> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-10">案內</td> -->
-			<!-- <td class="hanja-core" rowspan="2">文</td> -->
-			<!-- <td class="hanja-related-4">英</td> -->
-		<!-- </tr> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-9">原</td> -->
-			<!-- <td class="hanja-related-5">例</td> -->
-		<!-- </tr> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-8">漢</td> -->
-			<!-- <td class="hanja-related-7">注</td> -->
-			<!-- <td class="hanja-related-6">作</td> -->
-		<!-- </tr> -->
-	<!-- </tbody> -->
-<!-- </table> -->
+<table class="hanja">
+	<tbody>
+		<tr>
+			<td class="hanja-related-1"><abbr title="">間</abbr></td>
+			<td class="hanja-related-2"><abbr title="">穀</abbr></td>
+			<td class="hanja-related-3"><abbr title="">粉</abbr></td>
+		</tr>
+		<tr>
+			<td class="hanja-related-10"><abbr title="">會</abbr></td>
+			<td class="hanja-core" rowspan="2">食</td>
+			<td class="hanja-related-4"><abbr title="">洋</abbr></td>
+		</tr>
+		<tr>
+			<td class="hanja-related-9"><abbr title="">菜</abbr></td>
+			<td class="hanja-related-5"><abbr title="">後</abbr></td>
+		</tr>
+		<tr>
+			<td class="hanja-related-8"><abbr title="">飮</abbr></td>
+			<td class="hanja-related-7"><abbr title="">外</abbr></td>
+			<td class="hanja-related-6"><abbr title="">過</abbr></td>
+		</tr>
+	</tbody>
+</table>
 
-<!-- <ol> -->
-	<!-- <li>공문 公文 -->
-		<!-- <ul> -->
-			<!-- <li>공평할 공</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/043d279b36bb40d78762d0bbadad8ffe">https://hanja.dict.naver.com/#/entry/ccko/043d279b36bb40d78762d0bbadad8ffe</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>논문 論文 -->
-		<!-- <ul> -->
-			<!-- <li>논할 논</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/670e28a3090f400fa002ec28746e6f2c">https://hanja.dict.naver.com/#/entry/ccko/670e28a3090f400fa002ec28746e6f2c</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>본문 本文 -->
-		<!-- <ul> -->
-			<!-- <li>근본 본</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/61f01202d83841a3bd5152e31394fe31">https://hanja.dict.naver.com/#/entry/ccko/61f01202d83841a3bd5152e31394fe31</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>영문 英文 -->
-		<!-- <ul> -->
-			<!-- <li>꽃부리 영</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/bb673e8df33c4a4ead8301208b739096">https://hanja.dict.naver.com/#/entry/ccko/bb673e8df33c4a4ead8301208b739096</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>예문 例文 -->
-		<!-- <ul> -->
-			<!-- <li>법식 례(예)</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/c5c836f2372d419a93c973139f8e377b">https://hanja.dict.naver.com/#/entry/ccko/c5c836f2372d419a93c973139f8e377b</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>작문 作文 -->
-		<!-- <ul> -->
-			<!-- <li>지을 작</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/c2be23bbe9914702a01ed8b619fcd143">https://hanja.dict.naver.com/#/entry/ccko/c2be23bbe9914702a01ed8b619fcd143</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>주문 注文 -->
-		<!-- <ul> -->
-			<!-- <li>부을 주</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/9631e2959ced46fea2d9d907f65bda3a">https://hanja.dict.naver.com/#/entry/ccko/9631e2959ced46fea2d9d907f65bda3a</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>한문 漢文 -->
-		<!-- <ul> -->
-			<!-- <li>한수 한/한나라 한</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/1c46255422694417abd595c1ab55758f">https://hanja.dict.naver.com/#/entry/ccko/1c46255422694417abd595c1ab55758f</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>원문 原文 -->
-		<!-- <ul> -->
-			<!-- <li>언덕 원/근원 원</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/2b862148b14c4053aca634b88f435069">https://hanja.dict.naver.com/#/entry/ccko/2b862148b14c4053aca634b88f435069</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>안내문 案內文 -->
-		<!-- <ul> -->
-			<!-- <li>책상 안</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/a1c83d38126a4ecfaceacc408cc80df0">https://hanja.dict.naver.com/#/entry/ccko/a1c83d38126a4ecfaceacc408cc80df0</a></li> -->
-			<!-- <li>안 내</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/10f303bb84a74735a21b14ac0279bfeb">https://hanja.dict.naver.com/#/entry/ccko/10f303bb84a74735a21b14ac0279bfeb</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-<!-- </ol> -->
+<ol>
+	<li>간식 間食
+		<ul>
+			<li>사이 간</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/8ce8fc579f84443e9c9a1eb63d1a5420">https://hanja.dict.naver.com/#/entry/ccko/8ce8fc579f84443e9c9a1eb63d1a5420</a></li>
+		</ul>
+	</li>
+	<li>곡식 穀食
+		<ul>
+			<li>곡식 곡</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/12c9d6b526a94a5f97e87630903b755f">https://hanja.dict.naver.com/#/entry/ccko/12c9d6b526a94a5f97e87630903b755f</a></li>
+		</ul>
+	</li>
+	<li>분식 粉食
+		<ul>
+			<li>가루 분</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/6c14ae61be0743f2925cdd273bdec49c">https://hanja.dict.naver.com/#/entry/ccko/6c14ae61be0743f2925cdd273bdec49c</a></li>
+		</ul>
+	</li>
+	<li>양식 洋食
+		<ul>
+			<li>큰 바다 양</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/622f650487fa4b839934a758509216f7">https://hanja.dict.naver.com/#/entry/ccko/622f650487fa4b839934a758509216f7</a></li>
+		</ul>
+	</li>
+	<li>후식 後食
+		<ul>
+			<li>뒤 후</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/c5c836f2372d419a93c973139f8e377b">https://hanja.dict.naver.com/#/entry/ccko/c5c836f2372d419a93c973139f8e377b</a></li>
+		</ul>
+	</li>
+	<li>과식 過食
+		<ul>
+			<li>지날 과</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/20c2b9490e2e4592a4cc71d73a301d91">https://hanja.dict.naver.com/#/entry/ccko/20c2b9490e2e4592a4cc71d73a301d91</a></li>
+		</ul>
+	</li>
+	<li>외식 外食
+		<ul>
+			<li>바깥 외</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/2cb854535fe749a2b423285de2a1b2fe">https://hanja.dict.naver.com/#/entry/ccko/2cb854535fe749a2b423285de2a1b2fe</a></li>
+		</ul>
+	</li>
+	<li>음식 飮食
+		<ul>
+			<li>마실 음</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/b3902620d8194b78a410ce98ad7fa0f0">https://hanja.dict.naver.com/#/entry/ccko/b3902620d8194b78a410ce98ad7fa0f0</a></li>
+		</ul>
+	</li>
+	<li>채식 菜食
+		<ul>
+			<li>나물 채</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/c5053807435c4d9f9e6c8b525c77fd1e">https://hanja.dict.naver.com/#/entry/ccko/c5053807435c4d9f9e6c8b525c77fd1e</a></li>
+		</ul>
+	</li>
+	<li>회식 會食
+		<ul>
+			<li>모일 회</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/cb2acc8d3b3e4005a489823975ce3094">https://hanja.dict.naver.com/#/entry/ccko/cb2acc8d3b3e4005a489823975ce3094</a></li>
+		</ul>
+	</li>
+</ol>
 
-<!-- <table> -->
-	<!-- <thead> -->
-		<!-- <th>한자어</th> -->
-		<!-- <th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th> -->
-	<!-- </thead> -->
-	<!-- <tr> -->
-		<!-- <td>公文</td> -->
-		<!-- <td>(보건복지부, 단체, 보내다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>論文</td> -->
-		<!-- <td>(심사, 합격하다, 졸업하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>本文</td> -->
-		<!-- <td>(머리말, 맺음말)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>英文</td> -->
-		<!-- <td>(계약서, 국문, 작성하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>例文</td> -->
-		<!-- <td>(통하다, 단어를 외우다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>作文</td> -->
-		<!-- <td>(쓰기 수업, 실력)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>注文</td> -->
-		<!-- <td>(인터넷, 제품, 저렴하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>漢文</td> -->
-		<!-- <td>(중학교, 선택과목)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>原文</td> -->
-		<!-- <td>(번역, 차이, 의역)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>案內文</td> -->
-		<!-- <td>(박물관, 여러 언어)</td> -->
-	<!-- </tr> -->
-<!-- </table> -->
+<table>
+	<thead>
+		<th>한자어</th>
+		<th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th>
+	</thead>
+	<tr>
+		<td>間食</td>
+		<td>(견과류, 시험, 공부하다)</td>
+	</tr>
+	<tr>
+		<td>穀食</td>
+		<td>(농부, 밀과 보리, 거두다)</td>
+	</tr>
+	<tr>
+		<td>粉食</td>
+		<td>(불닭볶음면, 전세계, 인기)</td>
+	</tr>
+	<tr>
+		<td>洋食</td>
+		<td>(한국 청소년, 맥도날드, 즐겨먹다)</td>
+	</tr>
+	<tr>
+		<td>後食</td>
+		<td>(한국인, 식사, 커피)</td>
+	</tr>
+	<tr>
+		<td>過食</td>
+		<td>(비만, 벗어나다, 자제하다)</td>
+	</tr>
+	<tr>
+		<td>外食</td>
+		<td>(폴란드, 한국, 비하다, 자주 하다)</td>
+	</tr>
+	<tr>
+		<td>飮食</td>
+		<td>(스트레스, 해소하다, 맵다)</td>
+	</tr>
+	<tr>
+		<td>菜食</td>
+		<td>(사찰음식, 고기, 야채, 이루어지다)</td>
+	</tr>
+	<tr>
+		<td>會食</td>
+		<td>(교수, 학생들, 학기 말)</td>
+	</tr>
+</table>
 
 </body></html>
 
