--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -65,51 +65,45 @@
 			</tr>
 			<tr>
 				<th scope="row">8</th>
-				<td>2025년 11월 13일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td>2025년 11월 20일</td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/3">3. 요즘 아침마다 회의가 있어요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
-				<td>2025년 11월 20일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td>2025년 11월 27일</td>
 			</tr>
 			<tr>
 				<th scope="row">10</th>
-				<td>2025년 11월 27일</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row">11</th>
 				<td>2025년 12월 4일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">12</th>
+				<th scope="row">11</th>
 				<td>2025년 12월 11일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">13</th>
+				<th scope="row">12</th>
 				<td>2025년 12월 18일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
+				<th scope="row">13</th>
 				<td>2026년 1월 8일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">14</th>
 				<td>2026년 1월 15일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">16</th>
+				<th scope="row">15</th>
 				<td>2026년 1월 22일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">17</th>
+				<th scope="row">16</th>
 				<td>2026년 1월 29일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
