--- a/viiilo/zajecia/25-26/jk1/index.html
+++ b/viiilo/zajecia/25-26/jk1/index.html
@@ -34,12 +34,12 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>2025년 10월 2일</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/25-26/jk1/zajecia/1">Język koreański (한국어)</a></td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/25-26/jk1/zajecia/0">Język koreański (한국어)</a></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
 				<td>2025년 10월 9일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="4"><a href="viiilo/zajecia/25-26/jk1/zajecia/2">0과. 한글을 배워요</a></td>
+				<td class="schedule-lecture" colspan="2" rowspan="5"><a href="viiilo/zajecia/25-26/jk1/zajecia/1">0과. 한글을 배워요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
@@ -56,55 +56,49 @@
 			<tr>
 				<th scope="row">8</th>
 				<td>2025년 11월 6일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
-				<td>2025년 11월 13일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td>2025년 11월 20일</td>
+				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk1/zajecia/2">1과. 안녕하세요? 저는 안나예요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">10</th>
-				<td>2025년 11월 20일</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row">11</th>
 				<td>2025년 11월 27일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">12</th>
+				<th scope="row">11</th>
 				<td>2025년 12월 4일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">13</th>
+				<th scope="row">12</th>
 				<td>2025년 12월 11일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
+				<th scope="row">13</th>
 				<td>2025년 12월 18일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">14</th>
 				<td>2026년 1월 8일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">16</th>
+				<th scope="row">15</th>
 				<td>2026년 1월 15일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">17</th>
+				<th scope="row">16</th>
 				<td>2026년 1월 22일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">18</th>
+				<th scope="row">17</th>
 				<td>2026년 1월 29일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
