--- a/viiilo/zajecia/25-26/jk1/zajecia/1/index.html
+++ b/viiilo/zajecia/25-26/jk1/zajecia/1/index.html
@@ -2,7 +2,7 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 
-	<title>Język koreański - poziom 1</title>
+	<title>한국어 3급</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
@@ -11,56 +11,196 @@
 	<link rel="stylesheet" media="print" href="viiilo/.res/print.css">
 </head><body class="home">
 
-<h1>Język koreański - poziom 1</h1>
+<h1>한국어 1급<br><br>0과. 한글을 배워요</h1>
 
-<h2>Język koreański (한국어) - podstawowe informacje</h2>
+<h2>교과서</h2>
 
 <ul>
-	<li>język ojczysty dla 80 mln ludzi
-		<ul>
-			<li>52 mln w Korei Południowej</li>
-			<li>26 mln w Korei Północnej</li>
-			<li>2 mln poza Koreą</li>
-		</ul>
+	<li>
+		<div>1번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_1.mp3"></audio>
+		</div>
 	</li>
-	<li>oficjalny i narodowy język w Korei Południowej i Północnej</li>
-	<li>język ojczysty dla mniejszości etnicznych w wielu krajach
-		<ul>
-			<li>Chiny (<i>Chaoxianzu</i>, 조선족): 1,7 mln</li>
-			<li>były ZSRR (<i>Koryo-saram</i>, 고려인): 0,5 mln</li>
-			<li>Stany Zjednoczone (<i>jaemi gyopo</i>, 재미 교포): 2-2,5 mln</li>
-			<li>Japonia (<i>jaeil gyopo</i>, 재일 교포): 0,4 mln</li>
-		</ul>
+	<li>
+		<div>2번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_2.mp3"></audio>
+		</div>
 	</li>
-	<li>zapisywany w alfabecie koreańskim
-		<ul>
-			<li>nazywany hangul (kor. 한글, wym. <em>hangyl</em>) w Korei Południowej</li>
-			<li>nazywany chosŏn'gŭl (kor. 조선글) w Korei Północnej</li>
-		</ul>
+	<li>
+		<div>3번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_3.mp3"></audio>
+		</div>
 	</li>
-	<li>wynaleziony przez króla Sedzonga Wielkiego w XV wieku, jednego z najbardziej uwielbianych koreańskich władców</li>
-	<li>pierwotnie nazwany <i>hunminjeongeum</i> (kor. 훈민정음, dosł. „nauczanie ludzi poprawnych dźwięków”), obecnie znaczy dosł. „koreańskie pismo”</li>
-	<li>składa się łącznie z 40 liter, w tym 21 samogłosek oraz 19 spółgłosek</li>
-	<li>gramatycznie podobny do języka japońskiego, mongolskiego, tureckiego</li>
-	<li>posiada wiele odmian dialektu zależnie od regionu Korei</li>
+	<li>
+		<div>4번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_4.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>5번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_5.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>6번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_6.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>7번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_7.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>8번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_8.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>9번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_9.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>10번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_10.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>11번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_11.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>12번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_12.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>13번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_13.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>14번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_S_1A_00_14.mp3"></audio>
+		</div>
+	</li>
 </ul>
 
-<ul class="gallery">
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/세종대왕1.jpg"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/세종대왕1.jpg" alt="세종대왕1"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/세종대왕2.jpg"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/세종대왕2.jpg" alt="세종대왕2"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/훈민정음.jpg"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/훈민정음.jpg" alt="훈민정음"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/천지인1.png"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/천지인1.png" alt="천지인1"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/천지인2.webp"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/천지인2.webp" alt="천지인2"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/map_of_Korean_language.png"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/map_of_Korean_language.png" alt="map_of_Korean_language"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/koryo-saram.jpg"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/koryo-saram.jpg" alt="koryo-saram"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/vitaliy_kim.jpg"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/vitaliy_kim.jpg" alt="vitaliy_kim"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/sung-kim.jpg"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/sung-kim.jpg" alt="sung-kim"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/재일교포"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/재일교포.jpg" alt="재일교포"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/한류의시기별특징.jpg"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/한류의시기별특징.jpg" alt="한류의시기별특징"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/유튜브한국가수동영상조회수.webp"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/유튜브한국가수동영상조회수.webp" alt="유튜브한국가수동영상조회수"></a></li>
-	<li><a href="viiilo/zajecia/24-25/jk1/zajecia/1/img/연도별해외초중고등학교한국어반개설현황.jpg"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/연도별해외초중고등학교한국어반개설현황.jpg" alt="연도별해외초중고등학교한국어반개설현황"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/cCchIPz_pBs"><img src="viiilo/zajecia/24-25/jk1/zajecia/1/img/cCchIPz_pBs.webp" alt="Dave [Korean regional dialect differences]
-"></a></li>
+<h2>익힘책</h2>
+
+<ul>
+	<li>
+		<div>1번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_1.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>2번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_2.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>3번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_3.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>4번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_4.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>5번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_5.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>6번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_6.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>7번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_7.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>8번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_8.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>9번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_9.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>10번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_10.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>11번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_11.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>12번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_12.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>13번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_13.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>14번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_14.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>15번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_15.mp3"></audio>
+		</div>
+	</li>
+	<li>
+		<div>16번 듣기</div>
+		<div>
+			<audio controls src="viiilo/zajecia/25-26/jk1/pliki/SJ_W_1A_00_16.mp3"></audio>
+		</div>
+	</li>
 </ul>
 
 </body></html>
