--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -273,28 +273,24 @@
 				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5">“정치적 성향 다르면 연애∙결혼도 안 해”</a></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="3">10</th>
-				<td rowspan="3">28 maja 2025</td>
+				<th scope="row" rowspan="2">10</th>
+				<td rowspan="2">28 maja 2025</td>
 			</tr>
 			<tr>
 				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2">Kolokwium 2</a></td>
 				<td class="schedule-exam" colspan="2">zwierzęta</td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="2">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
 				<th scope="row">11</th>
 				<td>4 czerwca 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Zajęcia</td>
+				<td class="schedule-lecture"><!--psychologia--></td>
+				<td class="schedule-lecture"><!--<a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/6">한국인의 자기 개념</a>--></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="5">12</th>
 				<td rowspan="5">11 czerwca 2025</td>
-				<td class="schedule-presentation">Praca domowa 5</td>
+				<td class="schedule-presentation">Praca domowa 6</td>
 				<td class="schedule-presentation">Joanna Radwańska - tłumaczenie audiowizualne</td>
 				<td class="schedule-presentation"></td>
 			</tr>
@@ -348,7 +344,7 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>6 marca 2025</td>
-				<td class="schedule-lecture" rowspan="6">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="7">Zajęcia</td>
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/1">Wprowadzenie</a></td>
 			</tr>
 			<tr>
@@ -368,7 +364,7 @@
 			<tr>
 				<th scope="row">5</th>
 				<td>22 maja 2025</td>
-				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/3">文 글월 문</a></td>
+				<td class="schedule-lecture" rowspan="3"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/3">文 글월 문</a></td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
@@ -377,16 +373,15 @@
 			<tr>
 				<th scope="row" rowspan="2">7</th>
 				<td rowspan="2">5 czerwca 2025</td>
+			</tr>
+			<tr>
 				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium<!--/a--></td>
 				<td class="schedule-exam"></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="2">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
 				<th scope="row">8</th>
 				<td>12 czerwca 2025</td>
+				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
