--- a/uj/zajecia/24-25l/ljk5/zajecia/znaki/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/znaki/2/index.html
@@ -144,27 +144,27 @@
 	<tr>
 		<td>分離</td>
 		<td>(식당, 흡연석, 금연석)</td>
-		<td></td>
+		<td>손님의 담배 냄새에 대한 불평을 고려해 식당에서는 좌석을 흡연석과 금연석으로 <strong>분리(分離)</strong>했습니다.</td>
 	</tr>
 	<tr>
 		<td>分配</td>
 		<td>(자녀, 재산)</td>
-		<td></td>
+		<td>자녀들에게 어머니의 재산이 동등하게 <strong>분배(分配)</strong>됐어요.</td>
 	</tr>
 	<tr>
 		<td>分析</td>
 		<td>(우리 팀, 실패 원인)</td>
-		<td></td>
+		<td>우리 팀은 실패 원인을 제대로/자세하게/상세하게 <strong>분석(分析)</strong>했다.</td>
 	</tr>
 	<tr>
 		<td>分野</td>
 		<td>(한국, 정보통신)</td>
-		<td></td>
+		<td>한국은 정보통신 <strong>분야(分野)</strong>에서 가장 발달되어 있어요.</td>
 	</tr>
 	<tr>
 		<td>分布</td>
 		<td>(식물, 해안)</td>
-		<td></td>
+		<td>숲에서는 다양한 식물이 <strong>분포(分布)</strong>되어 있어요.</td>
 	</tr>
 </table>
 
@@ -261,46 +261,57 @@
 	<thead>
 		<th>한자어</th>
 		<th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th>
+		<th>문장</th>
 	</thead>
 	<tr>
 		<td>區分</td>
 		<td>(수업, 초중고급)</td>
+		<td>한국에서는 수업 시간에 학생들이 초중고급으로 <strong>구분(區分)</strong>되어 있다.</td>
 	</tr>
 	<tr>
 		<td>充分</td>
 		<td>(음식, 준비하다)</td>
+		<td>오늘은 우리 집에 손님이 오니까 음식을 <strong>충분(充分)</strong>히 준비하려고 온종일 부엌에서 요리했어요.</td>
 	</tr>
 	<tr>
 		<td>氣分</td>
 		<td>(운동, 좋아지다)</td>
+		<td>요즘에는 거의 매일 운동을 해서 <strong>기분(氣分)</strong>이 좋아졌어요.</td>
 	</tr>
 	<tr>
 		<td>德分</td>
 		<td>(한국 드라마, 한국말)</td>
+		<td>한국 드라마 <strong>덕분(德分)</strong>에 한국말이 공부하고 싶어서 한국학과에 지원했어요.</td>
 	</tr>
 	<tr>
 		<td>部分</td>
 		<td>(한류, 한국 문화)</td>
+		<td>한류는 한국을 세계적으로 유명하게 만든 한국문화의 중요한 <strong>부분(部分)</strong>이다.</td>
 	</tr>
 	<tr>
 		<td>人分</td>
 		<td>(우리 가족, 불고기)</td>
+		<td>우리 가족은 식당에서 저녁을 먹으면 보통 불고기 3<strong>인분(人分)</strong>을 시켜요.</td>
 	</tr>
 	<tr>
 		<td>身分</td>
 		<td>(외교관, 일하다)</td>
+		<td>작년부터 한국에서 외교관 <strong>신분(身分)</strong>으로 일해왔고 지난주에는 윤 전 대통령을 만났을 때 화가 나서 때렸어요.</td>
 	</tr>
 	<tr>
 		<td>成分</td>
 		<td>(생명체, 구성하다)</td>
+		<td>모든 생명체는 다양한 화학 <strong>성분(成分)</strong>으로 구성되어 있다.</td>
 	</tr>
 	<tr>
 		<td>水分</td>
 		<td>(피부 건강, 섭취하다)</td>
+		<td>피부 건강을 위해서는 <strong>수분(水分)</strong>이 많은 음식과 음료수를 섭취하는 것이 매우 중요합니다.</td>
 	</tr>
 	<tr>
 		<td>親分</td>
 		<td>(그분, 오랫동안)</td>
+		<td>그분과 오랫동안 <strong>친분(親分)</strong>이 있었지만 이야기를 하고 싶지 않다.</td>
 	</tr>
 </table>
 
