--- a/uj/zajecia/24-25l/ljk5/zajecia/znaki/3/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/znaki/3/index.html
@@ -121,27 +121,27 @@
 	<tr>
 		<td>文段</td>
 		<td>(어휘 목록, 제시되다)</td>
-		<td></td>
+		<td>학생들이 <strong>문단(文段)</strong>을 번역할 수 있도록 어휘 목록이 제시되었어요.</td>
 	</tr>
 	<tr>
 		<td>文脈</td>
 		<td>(단어의 의미, 이해하지 못하다)</td>
-		<td></td>
+		<td>불분명한 <strong>문맥(文脈)</strong> 때문에 단어의 의미를 이해하지 못한다.</td>
 	</tr>
 	<tr>
 		<td>文法</td>
 		<td>(의사소통, 중요하다)</td>
-		<td></td>
+		<td>언어를 배울 때는 <strong>문법(文法)</strong>보다 의사소통이 더 중요합니다.</td>
 	</tr>
 	<tr>
 		<td>文字</td>
 		<td>(전화, 바쁘다, 편하다)</td>
-		<td></td>
+		<td>내일 좀 바쁘니까 전화를 받을 수 없을 것 같아요. <strong>문자(文字)</strong>를 보내면 더 편해요.</td>
 	</tr>
 	<tr>
 		<td>文章</td>
 		<td>(한국어, 폴란드어, 번역, 어렵다)</td>
-		<td></td>
+		<td>한국어 <strong>문장(文章)</strong>을 폴란드어로 번역하는 것은 때때로 어렵다.</td>
 	</tr>
 	<tr>
 		<td>文書</td>
