--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -347,7 +347,7 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>6 marca 2025</td>
-				<td class="schedule-lecture" rowspan="5">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="6">Zajęcia</td>
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/1">Wprowadzenie</a></td>
 			</tr>
 			<tr>
@@ -358,31 +358,29 @@
 			<tr>
 				<th scope="row">3</th>
 				<td>8 maja 2025</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/2">分 나눌 분</a></td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/2">分 나눌 분</a></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
 				<td>15 maja 2025</td>
-				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
 				<td>22 maja 2025</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/3">文 글월 문</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">6</th>
 				<td rowspan="2">29 maja 2025</td>
+			</tr>
+			<tr>
 				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium<!--/a--></td>
 				<td class="schedule-exam"></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="5">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
 				<th scope="row">7</th>
 				<td>5 czerwca 2025</td>
+				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
