--- a/uj/zajecia/25-26z/klc3/index.html
+++ b/uj/zajecia/25-26z/klc3/index.html
@@ -115,28 +115,59 @@
 				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/1">1과. 성격이 참 좋아 보여요</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2">시간 표현; 부정 표현</td>
+				<td class="schedule-lecture" rowspan="2">문법</td>
+				<td class="schedule-lecture" colspan="2" rowspan="2">시간 표현; 부정 표현</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">7</th>
 				<td rowspan="2">2025년 11월 28일</td>
+			</tr>
+			<tr>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</a></td>
+			</tr>
+			<tr>
+				<th scope="row" rowspan="10">8</th>
+				<td rowspan="10">2025년 12월 5일</td>
+				<td class="schedule-exam" rowspan="8">말하기 중간고사</td>
+				<td class="schedule-exam">8:45–8:53</td>
+				<td class="schedule-exam">아네타, 주잔나</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">8:53–9:01</td>
+				<td class="schedule-exam">이레네, 안나</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:01–9:09</td>
+				<td class="schedule-exam">베아타, 베로니카</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:09–9:17</td>
+				<td class="schedule-exam">하티제, 에바</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:17–9:25</td>
+				<td class="schedule-exam">킹가 두데크, 카롤리나</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:25–9:33</td>
+				<td class="schedule-exam">율리아, 알렉산드라</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:33–9:41</td>
+				<td class="schedule-exam">킹가 마이헤르치크, 빅토리아</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:41–9:49</td>
+				<td class="schedule-exam">다리아, 마그달레나</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">문법 중간고사</td>
+				<td class="schedule-exam" colspan="2">높임법; 어감; 시간 표현; 부정 표현</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
 				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row" rowspan="2">8</th>
-				<td rowspan="2">2025년 12월 5일</td>
-				<td class="schedule-exam">말하기 중간고사</td>
-				<td class="schedule-exam" colspan="2"></td>
-			</tr>
-			<tr>
-				<td class="schedule-exam">문법 중간고사</td>
-				<td class="schedule-exam" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">9</th>
