--- a/uj/zajecia/24-25l/mkmb/class/10/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/10/index.html
@@ -13,210 +13,206 @@
 
 <h1>Modern Korean in Media and Business (3)</h1>
 
-<h2>coffee culture - 중1 손에 대용량 커피…"싸고 덜 졸려서" 매일 사먹는 아이들</h2>
+<h2>tattoo scene in South Korea - 문신하셨나요? 가려주세요, 아니면 나가주세요</h2>
 
-<!-- <div class="youtube"> -->
-	<!-- <object data="https://youtube.com/embed/mr8Bh7tnpEE" type="text/html">중학생 손에 대용량 커피…"싸고 잠 깨워줘서 매일 마셔요" / SBS / 실시간 e뉴스</object> -->
-<!-- </div> -->
+<div class="youtube">
+	<object data="https://youtube.com/embed/i0H1s-RXSf0" type="text/html">"15cm 넘으면 안 돼요"…'노 타투존'에 갑론을박 / SBS / 뉴블더</object>
+</div>
 
 <ul class="gallery">
-	<li><a href="uj/zajecia/24-25l/mkmb/class/9/img/대용량커피.jpg"><img src="uj/zajecia/24-25l/mkmb/class/9/img/대용량커피.jpg" alt="대용량커피"></a></li>
-	<li><a href="uj/zajecia/24-25l/mkmb/class/9/img/연령대별선호커피.jpg"><img src="uj/zajecia/24-25l/mkmb/class/9/img/연령대별선호커피.jpg" alt="연령대별선호커피"></a></li>
+	<li><a href="uj/zajecia/24-25l/mkmb/class/10/img/정국.jpg"><img src="uj/zajecia/24-25l/mkmb/class/10/img/정국.jpg" alt="정국"></a></li>
+	<li><a href="uj/zajecia/24-25l/mkmb/class/10/img/조폭문신.jpg"><img src="uj/zajecia/24-25l/mkmb/class/10/img/조폭문신.jpg" alt="조폭문신"></a></li>
 </ul>
-
-<ul>
-	<li>중 = 중학교</li>
-	<li>대(大) - large</li>
-	<li>용량 - quantity</li>
-	<li>졸리다 - to be sleepy</li>
-	<li>고(高) - high</li>
-	<li>성장 - development</li>
-	<li>방해 - obstruction, hindrance</li>
-	<li>일대 - the whole area</li>
-	<li>저가 - inexpensive</li>
-	<li>형(型) - type</li>
-	<li>구매 - buying</li>
-	<li>섭취 - intake, ingestion</li>
-	<li>권고 - recommendation, advise</li>
-	<li>훌쩍 넘다 - to be well over (sth)</li>
-	<li>특별 - special</li>
-	<li>지도 - support, guidance</li>
-</ul>
-
-<h3>번역</h3>
-
-<p>0-1. 중1 손에 대용량 커피…"싸고 덜 졸려서" 매일 사먹는 아이들</p>
-<p>0-2. 고카페인 성장에 방해…학교·학원가 일대 저가형 카페서 쉽게 구매</p>
-<p>0-3. 대용량 한 잔만 마셔도 청소년 섭취 권고량 훌쩍…"특별 지도 필요"</p>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>가(街) - street</li>
-	<li>수면 - sleep</li>
-	<li>줄이다 - to shorten</li>
-	<li>목표 - goal</li>
-	<li>자율 - autonomy</li>
-	<li>사립 - private</li>
-	<li>입시 = 입학시험 - entrance examination</li>
-	<li>다가오다 - to draw near/closer, to come</li>
+	<li>문신(文身) - tattoo</li>
+	<li>가리다 - to cover</li>
+	<li>과도하다 - to be excessive</li>
+	<li>위화감 - disharmony, sense of incompatibility, feeling that sth is out of place</li>
+	<li>호소 - to appeal, to plead, to complain</li>
+	<li>입장 - entry</li>
 </ul>
 
 <h3>번역</h3>
 
-<p>1. "학원 근처에 저가 커피를 파는 카페가 4군데 정도 되거든요.</p>
-<p>2. 마시면 확실히 수업 들을 때 덜 졸려서 자주 사 마셔요."</p>
-<p>3-1. 서울 양천구 목동 학원가에서 만난 중학교 3학년 황모(15) 양은</p>
-<p>3-2. 2학기가 되면서 수면시간을 4시간으로 줄였다.</p>
-<p>4-1. 목표로 하는 자율형 사립 고등학교 입시가</p>
-<p>4-2. 코앞으로 다가왔기 때문이다.</p>
+<p>0-1. 문신하셨나요? 가려주세요, 아니면 나가주세요.</p>
+<p>0-2. 과도한 문신에 위화감 호소</p>
+<p>0-3. 헬스·수영장 “가려야 입장”</p>
+<p>0-4. “문신이 있다면 긴옷을 입어주세요.”</p>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>이르다 - to be early</li>
-	<li>눈꺼풀 - eyelid</li>
-	<li>쉬는 시간 - break (e.g. at school)</li>
-	<li>일상 - everyday life, routine</li>
-	<li>존재 - being, thing</li>
-	<li>다니다 - to attend</li>
-	<li>워낙 = so (much)</li>
-	<li>저렴하다 - to be affordable</li>
-	<li>호기심 - curiosity</li>
-	<li>두어 - about/around two</li>
-	<li>중독 - addiction</li>
+	<li>공지하다 - to announce</li>
+	<li>방침 - rule, policy</li>
+	<li>특성상 - due to the nature (of sth)</li>
+	<li>신체 = 몸</li>
+	<li>노출 - exposure, revealing</li>
+	<li>덮다 - to cover</li>
+	<li>조성하다 - to create (e.g. an atmosphere)</li>
+	<li>입간판 - (storefront) sign</li>
+	<li>잇따라 - one after another, consecutively</li>
+	<li>공유하다 - to share</li>
+	<li>화제를 모으다 - to become a hot topic</li>
 </ul>
 
 <h3>번역</h3>
 
-<p>5-1. 이른 저녁을 먹고 학원에 가면</p>
-<p>5-2. 눈꺼풀이 무거워서</p>
-<p>5-3. 수업 전이나 쉬는 시간에 학원 앞 카페에서 대용량 아메리카노를 사 마시는 게 일상이 됐다.</p>
-<p>6-1. 초등학교 6학년 때부터 사 먹기 시작한 커피가</p>
-<p>6-2. 지금은 '없으면 안 되는 존재'가 돼버렸다.</p>
-<p>7-1. 황 양은 "다니는 학원 앞에 워낙 저렴하게 커피를 파는 곳이 많다 보니</p>
-<p>7-2. 처음에는 호기심에 사 마셨다가 이제는 하루에 두어 잔은 마신다.</p>
-<p>8. 중독일 수도 있다"고 말했다.</p>
+<p>1. 서울 역삼동의 한 유명 헬스장이 최근 공지한 ‘노 타투’(No Tatoo) 방침이다.</p>
+<p>2-1. 헬스장 특성상 신체 노출이 자유로운데,</p>
+<p>2-2. 팔·다리를 거의 덮는 과도한 문신으로</p>
+<p>2-3. 위화감을 조성하는 회원이 늘었기 때문이다.</p>
+<p>3-1. 해당 공지가 적힌 입간판 사진이</p>
+<p>3-2. 소셜미디어에서 잇따라 공유되며 화제를 모았다.</p>
 
 <h3>어휘</h3>
 
 <ul>
-	<li>경시대회 - competition, (school) olympiad</li>
-	<li>하루도 빠지지 않고 - every day with no exception</li>
-	<li>버티다 - to endure/withstand/hold out</li>
-	<li>달달하다 = 꿀이나 설탕의 맛과 같이 달다</li>
-	<li>당기다 - to be drawn (to sth)</li>
-	<li>증상 - symptom</li>
-	<li>심장 - heart</li>
-	<li>킁킁 - heartbeat sound</li>
-	<li>뛰다 - to beat (about heart)</li>
-	<li>집 = 가게 = 식당</li>
-	<li>음료 - drink</li>
+	<li>요새 = 요사이 = 최근</li>
+	<li>소중하다 - to be valuable (for sb)</li>
+	<li>담기다 - to be filled (with sth), to be included</li>
+	<li>개성 - individuality, character</li>
+	<li>표출 - expression (of sth)</li>
+	<li>소위/이른바 - so called</li>
+	<li>위협적 - intimidatory, threatening</li>
+	<li>권리 - right (e.g. to do sth)</li>
+	<li>동시 - at the same time, simultaneously</li>
+	<li>다중 이용시설 - public facilities</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>4-1. 이곳 관장은 “요새 본인만의 소중한 의미가 담긴 문신도 많고</p>
+<p>4-2. 이는 개성의 표출이라고 생각하지만</p>
+<p>5. 소위 ‘건달 문신’은 남이 봤을 때 상당히 위협적”이라고 말했다.</p>
+<p>6. “나의 자유와 권리는 매우 중요합니다.</p>
+<p>7. 동시에 타인의 자유와 권리 또한 중요합니다.</p>
+<p>8. 이곳은 다중 이용시설입니다.”</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>대중화 - becoming popular/common</li>
+	<li>인구 - population</li>
+	<li>보건복지부 - Ministry of Health and Welfare</li>
+	<li>추산 - estimation (e.g. of a number)</li>
+	<li>대중적 - mass</li>
+	<li>자리(를) 잡다 - to establish (itself as sth)</li>
+	<li>반감 - hostility, animosity</li>
+	<li>속속 = 자꾸 잇따라서</li>
+	<li>여론조사기관 - opinion polling institute</li>
+	<li>인식 - perception</li>
+	<li>불량하다 = 행실이나 성품이 나쁘다 - to be of poor quality</li>
+	<li>혐오스럽다 - to be disgusting</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>9. 文身 대중화에도… “불편해”</p>
+<p>10. 문신 인구 1300만명(보건복지부 추산) 시대다.</p>
+<p>11-1. 문신이 대중적인 패션으로 자리 잡은 지 오래지만,</p>
+<p>11-2. 적지 않은 반감 역시 속속 확인되고 있다.</p>
+<p>12-1. 여론조사기관 한국리서치가 지난 3월</p>
+<p>12-2. 전국 만 18세 이상 남녀 1000명을 대상으로 진행한 설문조사에 따르면,</p>
+<p>12-3. 문신과 문신한 사람에 대한 인식에서</p>
+<p>12-4. “불량하거나 무섭다”고 답한 비율이 66%를 차지했다.</p>
+<p>13. 문신 문화에 개방적인 20·30대에서도 각 58%, 61%로 높은 응답률을 보였다.</p>
+<p>14. 심지어 “혐오스럽다”고 답한 비율도 전체의 60%였다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>조폭 = 조직 폭력배 - gang</li>
+	<li>확산하다 - to spread</li>
+	<li>온 - whole</li>
+	<li>도배하다 - to plaster/cover (sth with sth)</li>
+	<li>넘쳐나다 - to overflow, to be too much</li>
+	<li>남녀노소 - men and women of all ages</li>
+	<li>풍경 - landscape, scenery, sight</li>
+	<li>협회 - association</li>
+	<li>추정 = estimation, assumption, presumption</li>
+	<li>규모 - scale</li>
+	<li>과감하다 - to be drastic, to be bold</li>
+	<li>모객하다 - to look/search for customers</li>
+	<li>업자 - trader, dealer, businessman</li>
+</ul>
+
+<h3>번역</h3>
+
+<p>15. 미성년자도 ‘조폭 문신’ 확산</p>
+<p>16-1. 온몸을 그림으로 도배한 인기 연예인이 넘쳐나고,</p>
+<p>16-2. 길거리에서도 남녀노소 흔한 풍경이 됐다.</p>
+<p>17. 한국타투협회 추정 국내 타투 시장 규모는 2조원 수준이다.</p>
+<p>18. 1년 만에 2배 가까이 증가한 수치다.</p>
+<p>19. 중·고등학생들도 문신에 과감해지고 있다.</p>
+<p>20. 소셜미디어에서 ‘미성년자 타투’를 해시태그로 온라인 모객을 하는 업자들도 있을 정도다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>기념일 - anniversary</li>
+	<li>각인 - carving, engraving</li>
+	<li>상징 - symbol</li>
+	<li>용 - dragon</li>
+	<li>잉어 - carp</li>
+	<li>문양 = 무늬 - design</li>
+	<li>새기다 - to carve, to engrave</li>
+	<li>위압감 - feeling of pressure/coercion</li>
+	<li>과시하다 - to parade, to show off</li>
+	<li>욕구 - desire, urge</li>
+	<li>원조 - originator, the father (of sth)</li>
+	<li>온촌 - hot spring</li>
+	<li>일종 - some kind (of sth)</li>
+	<li>주홍글씨 - <a href="https://en.wikipedia.org/wiki/The_Scarlet_Letter"><em>The Scarlet Letter</em></a></li>
+</ul>
+
+<h3>번역</h3>
+
+<p>21. ‘문신의 내용’도 과감해지고 있다.</p>
+<p>22-1. 이름이나 기념일 등의 각인을 넘어</p>
+<p>22-2. 일본 조직 폭력배의 상징 ‘이레즈미’까지 확산하고 있는 것이다.</p>
+<p>23. 용이나 잉어 등의 문양을 몸 전체에 새기는 것이다.</p>
+<p>24. 위압감을 과시해 강해 보이려는 욕구가 주된 이유다.</p>
+<p>25-1. 다만 이레즈미의 원조 일본도 문신이 있으면</p>
+<p>25-2. 온천이나 목욕탕은 출입이 불가하다.</p>
+<p>26. 일종의 주홍글씨인 셈이다.</p>
+
+<h3>어휘</h3>
+
+<ul>
+	<li>통과하다 - to pass (a law)</li>
+	<li>합법화 - legalisation</li>
+	<li>요구 - demand</li>
+	<li>제기하다 - to raise, to bring up, to file</li>
+	<li>호오(好惡) = 좋음과 싫음</li>
+	<li>부작용 - side effect</li>
+	<li>위생 관리 - hygiene</li>
+	<li>시술 - medical procedure</li>
+	<li>양성화 = 합법화</li>
+	<li>감독(監督) - supervision</li>
 </ul>
 
 <h3>문법</h3>
 
-<li>- ~ㄴ/는다고 해서 (…) ~는 건 아니다</li>
-
-<h3>번역</h3>
-
-<p>9-1. 수학 경시대회를 준비하며 오후 10시까지 학원 수업을 듣는 중1 윤모(13) 군도</p>
-<p>9-2. 요즘 하루도 빠지지 않고 대용량 커피를 한 잔씩 사 마신다고 했다.</p>
-<p>10-1. 윤 군은 "학원 수업이 밤늦게 끝나는데</p>
-<p>10-2. 졸리면 버티기 힘들어서 커피를 마시기 시작했다"며</p>
-<p>10-3. "달달한 게 당겨서 오늘은 카페 모카를 샀다"고 웃으며 말했다.</p>
-<p>14-1. 윤 군은 "집에 가서 잠을 못 잔다거나 그런 증상을 겪은 적은 없지만 심장이 '쿵쿵' 빠르게 뛸 때는 있다"면서도</p>
-<p>14-2. "그래도 학원 쉬는 시간에 빠르게 내려와 살 수 있고 효과가 있는 것 같아 자주 사 마신다"고 했다.</p>
-<p>15-1. 아이스라떼를 손에 들고 있던 중1 이모(13) 양은</p>
-<p>15-2. "요즘엔 (학교 주변에) 떡볶이집보다 'XX커피' 같은 카페가 훨씬 많다"며</p>
-<p>15-3. "학교에서 커피 음료를 안 판다고 해서 (학생들이) 커피를 안 마시는 건 아니다"라고 말했다.</p>
-
-<h3>어휘</h3>
-
 <ul>
-	<li>직장인 - office worker</li>
-	<li>붐비다 - to be crowded</li>
-	<li>도심 = 시내 - downtown, city centre</li>
-	<li>유동 인구 - floating population</li>
-	<li>번화가 - to main street</li>
-	<li>인근 = 근처</li>
-	<li>들어서다 - to enter, to build</li>
-	<li>과다 - excessive</li>
-	<li>우려 - worry</li>
-	<li>경쟁 - competition</li>
-	<li>부담 - burden</li>
-	<li>찾다 = 방문하다 - to visit</li>
-	<li>대표적 - typical, representative</li>
-	<li>N에서 보호하다 - to protect (from sth)</li>
-	<li>현행법 - current law</li>
-	<li>취지 = 목적, 의미</li>
-	<li>무색하다 - to be colourless, to be</li>
-</ul>
-
-<h3>문법</h3>
-
-<ul>
-	<li>N은/는 물론이다 - not only N, but also (…)</li>
+	<li>-와(는) 별개로 - independently (from sth)</li>
 </ul>
 
 <h3>번역</h3>
 
-<p>16-1. 직장인으로 붐비는 도심이나 유동 인구가 많은 번화가는 물론이고</p>
-<p>16-2. 학교 인근과 학원가 곳곳에도 저가형 프랜차이즈 카페가 들어서면서</p>
-<p>16-3. 청소년의 카페인 과다 섭취에 대한 우려가 커지고 있다.</p>
-<p>17. 경쟁적으로 매장이 들어서 어디서든 찾을 수 있고 저렴한 가격에 부담 없이 찾는다는 게 청소년들 얘기다.</p>
-<p>18. 커피나 에너지드링크 등 대표적인 고카페인 식품에서 청소년을 보호하겠다는 현행법의 취지가 무색할 정도다.</p>
+<p>27. ‘타투법’ 올해 통과되나</p>
+<p>28. 합법화 요구가 끊임없이 제기되는 이유다.</p>
+<p>29-1. 문신에 대한 호오(好惡)와는 별개로,</p>
+<p>29-2. 부작용 및 위생 관리를 위해서라도</p>
+<p>29-3. 문신업자의 시술 행위를 양성화해</p>
+<p>29-4. 정부 감독 아래 두는 게 낫다는 것이다.</p>
 
-<h3>어휘</h3>
-
-<ul>
-	<li>N당 = N마다</li>
-	<li>함유하다 - to include (sth in itself)</li>
-	<li>식약처 = 식품의약품안전처 (Ministry of Food and Drug Safety)</li>
-	<li>체중 - body weight</li>
-	<li>이하 - below</li>
-	<li>권장 = 권고</li>
-	<li>몸무게 = 체중</li>
-	<li>일일 - daily</li>
-	<li>N짜리</li>
-	<li>상당수 - the vast majority</li>
-</ul>
-
-<h3>번역</h3>
-
-<p>19. 고카페인 음료는 100ml당 카페인 15㎎ 이상을 함유한 음료다.</p>
-<p>20-1. 식약처에 따르면 청소년 및 어린이는 체중 1㎏당 카페인 2.5㎎ 이하가 최대 섭취 권장량인데</p>
-<p>20-2. 몸무게 50㎏ 청소년의 카페인 최대 일일 섭취 권고량은 125㎎이다.</p>
-<p>21-1. 한 저가 커피 브랜드 홈페이지에 따르면</p>
-<p>21-2. 20oz(약 600ml)짜리 아이스 아메리카노의 카페인 함유량은 204.2㎎이다.</p>
-<p>22-1. 상당수 초중고교생으로서는 한 잔만 마셔도
-<p>22-2. 최대 섭취 권장량을 훌쩍 넘기게 되는 것이다.</p>
-
-<h3>어휘</h3>
+<h3>Source:</h3>
 
 <ul>
-	<li>심상치 않다 - to be important and uncommon</li>
-	<li>수준 - level</li>
-	<li>질병관리청 - Korea Disease Control and Prevention Agency</li>
-	<li>행태 - behaviour, conduct</li>
-	<li>회 - time(s)</li>
-	<li>어린이식생활안전관리특별법 - Special Act on Safety Management of Children's Dietary Lifestyle</li>
-	<li>함유 = 포함</li>
-	<li>올바르다 - to be proper/correct</li>
-	<li>식생활 - eating habits</li>
-	<li>요주의 - special attention</li>
-</ul>
-
-<h3>번역</h3>
-
-<p>23. 하지만 청소년의 고카페인 음료 섭취는 심상치 않은 수준이다.</p>
-<p>24-1. 질병관리청이 작년 전국 800개교 중고생 약 6만 명을 대상으로 한 '청소년건강행태조사'에서</p>
-<p>24-2. 응답 청소년의 22.3%는 주 3회 이상 고카페인 음료를 섭취한다고 답했다.</p>
-<p>25. 주 1∼2회 마신다는 응답도 26.4%나 됐다.</p>
-<p>26. 어린이식생활안전관리특별법에 따르면 고카페인 함유 식품은 18세 미만 아동의 올바른 식생활에 '요주의' 식품이다.</p>
-
-<ul>
-	<li><a href="https://n.news.naver.com/mnews/ranking/article/001/0014197423">https://n.news.naver.com/mnews/ranking/article/001/0014197423</a></li>
+	<li><a href="https://n.news.naver.com/mnews/article/023/0003781232">https://n.news.naver.com/mnews/article/023/0003781232</a></li>
 </ul>
 
 </body></html>
