--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -197,8 +197,8 @@
 			<tr>
 				<th scope="row">11</th>
 				<td>28 May 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">underground tattoo scene in South Korea</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/10">문신하셨나요? 가려주세요, 아니면 나가주세요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
